c3p0-0.9.2-pre6
	-- Added some logic that continues to enforce sequential (i.e. nonsimultaneous) use of
	   PooledConnections in Connection tests, without requiriing Threads to use NewPooledConnection's
	   lock. Clients of NewPooledConnection should not hold its lock directly, to avoid
	   potential deadlocks due to Connection eent handlers. [Many thanks to Jan Zuchhold
	   for calling attention to this problem.]
        -- Added a DEBUG STACK TRACE at log level FINEST in BasicResourcePool for tracking the cause
	   of resource exclusion.
	-- Added a README.md file for github.
	-- Updated documentation to include dataSourceName as a config parameter, and to describe
	   its use in generating stable JMX identifers.
        -- Made dataSourceName a first-class config parameter, configurable in all the usual ways,
	   to help support its use for stable JMX names.
        -- Included (excellent, very lightweight) patch by Bryan Varner [ https://github.com/bvarner ]
	   that includes the property dataSourceName in the registered name of c3p0
	   JMX mbeans. As Varner writes, "This allows you to query mbeans by stable name patterns,
	   allowing for reliable instrumentation via JMX between VM instances." Many thanks
	   to Bryan Varner.
	-- Updated RELEASE_NOTES
c3p0-0.9.2-pre5
	-- Some fixes of issues with per-user config overrides, verified and
	   updated docs with respect to per-user configs.
	-- Unsynchronized access to identityToken in the various identityTokenized
	   beans, marking the property volatile instead. This should resolve an
	   occasional deadlock. Many thanks to Phillip Henry, see
	   https://sourceforge.net/tracker/?func=detail&atid=383690&aid=3552097&group_id=25357
	-- Fixed a bug whereunder PoolBackedDataSources threw an Exception
	   trying to bind per-user overrides that properly should be bound
	   only to WrapperConnectionPoolDataSource (or to ComboPooledDataSource,
	   which wraps that). Many thanks to Walter Marcelo Pedrozo Barboza